--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
       DB_URL: ${DB_URL}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
-    command: npm start
+      DB_NAME: ${DB_NAME}
+    command: npm run dev
   db:
     image: mongo
     restart: always
