--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
+    "axios": "^0.19.2",
     "jest":"^25.1.0",
     "nodemon": "^2.0.2"
   }
