--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "Hubert Wong",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
