User able to create task with JWT token

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+DOCKER_IP=172.16.238.10
+DOCKER_SUBNET=172.16.238.0/24
 APP_PORT=3000
+APP_DEBUG_PORT=9229
 DB_USERNAME=root
 DB_PASSWORD=example
 DB_URL=db
