--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "jest --runInBand --detectOpenHandles"
   },
   "author": "Hubert Wong",
   "license": "ISC",
@@ -21,8 +21,8 @@
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
-    "axios": "^0.19.2",
     "jest":"^25.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
