WIP added a good amout of patch test. Fix an issue where the validationn middleware was not working

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ DB_USERNAME=root
 DB_PASSWORD=example
 DB_URL=db
 DB_NAME=test
+NODE_ENV=test
 JWT_SECRET_KEY=mySpiffySecretKey
 PASSWORD_HASH_ROUNDS=8
