Added postman. Added a readme. Added env and did some testing to see if docker and non docker version worked

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       PASSWORD_HASH_ROUNDS: ${PASSWORD_HASH_ROUNDS}
       NODE_ENV: ${NODE_ENV}
-    command: npm test
+    command: npm start
   db:
     image: mongo
     restart: always
