--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,6 @@
 APP_PORT=3000
 APP_DEBUG_PORT=9229
-DB_USERNAME=root
-DB_PASSWORD=example
-DB_URL=db
+DB_URL=localhost
 DB_NAME=test
 NODE_ENV=test
 JWT_SECRET_KEY=mySpiffySecretKey
