--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
@@ -21,7 +22,7 @@
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
-    "jest":"^25.1.0",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
